add endpoint into swagger for GetTecDocArticles
